<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/about_version"
            style="@style/CaptionText"/>
        <TextView
            android:id="@+id/version"
            android:text="@string/unknown"
            style="@style/BodyText"/>
        <TextView
            android:text="@string/about_site"
            style="@style/CaptionText"/>
        <TextView
            android:autoLink="web"
            android:text="@string/site_link"
            style="@style/BodyText"/>
        <TextView
            android:text="@string/about_forum"
            style="@style/CaptionText"/>
        <TextView
            android:autoLink="web"
            android:text="@string/forum_link"
            style="@style/BodyText"/>
        <TextView
            android:text="@string/about_source"
            style="@style/CaptionText"/>
        <TextView
            android:autoLink="web"
            android:text="@string/source_link"
            style="@style/BodyText"/>
        <TextView
            android:text="@string/about_license"
            style="@style/CaptionText"/>
        <TextView
            android:text="@string/license_gplv3_later"
            style="@style/BodyText"/>
    </LinearLayout>
</ScrollView>
