<?xml version="1.0" encoding="utf-8"?>
<org.fdroid.fdroid.nearby.SwapView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:swap="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/swap_blue"
    android:padding="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    swap:toolbarTitle="@string/swap_confirm">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="117.6dp"
        android:layout_height="117.6dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/icon"
        swap:srcCompat="@drawable/ic_launcher"/>
    <TextView
        android:textSize="28sp"
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swap_welcome"
        android:lines="1"
        android:layout_below="@+id/icon"
        style="@style/SwapTheme.Wizard.ReceiveSwap.MainText"/>
    <TextView
        android:textSize="25.75sp"
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        style="@style/SwapTheme.Wizard.Text"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/text_description"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/confirm_receive_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/no"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/swap_deny"/>
        <Button
            android:id="@+id/confirm_receive_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:backgroundTint="@color/swap_light_blue"/>
    </LinearLayout>
</org.fdroid.fdroid.nearby.SwapView>
