<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:title="@string/menu_manage"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:scrollbars="vertical"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_gravity="end|bottom"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/menu_add_repo"
        app:layout_anchor="@+id/list"
        app:layout_anchorGravity="end|bottom"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
