<?xml version="1.0" encoding="utf-8"?>
<org.fdroid.fdroid.nearby.StartSwapView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:toolbarColor="@color/swap_bright_blue"
    app:toolbarTitle="@string/swap_nearby">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wifi_banner"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wifi_banner_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_wifi_off"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swap_banner_message"
                    android:layout_marginStart="24dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_gravity="end"
                    android:id="@+id/turn_on_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/turn_on_wifi"
                    style="@style/ThemeOverlay.App.Button.TextButton"/>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_banner"
        layout="@layout/start_swap_header"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bluetooth_info"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/use_bluetooth"
            app:srcCompat="@drawable/ic_bluetooth_searching"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp">
            <TextView
                android:textSize="18sp"
                android:id="@+id/bluetooth_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/swap_light_text"
                android:id="@+id/device_id_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:enabled="false"
            android:id="@+id/switch_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/wifi_info"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bluetooth_info">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/wifi"
            app:srcCompat="@drawable/ic_wifi"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp">
            <TextView
                android:textSize="18sp"
                android:id="@+id/wifi_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/swap_light_text"
                android:id="@+id/device_id_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swap_wifi_device_name"/>
            <TextView
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                android:id="@+id/wifi_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"/>
        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/feedback_searching"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_info"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <TextView
            android:textColor="@color/swap_light_text"
            android:id="@+id/text_people_nearby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swap_people_nearby"
            android:layout_weight="1"/>
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/searching_people_nearby"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminate="true"
            app:hideAnimationBehavior="outward"
            app:indicatorSize="24dp"
            app:showAnimationBehavior="inward"
            app:trackCornerRadius="@dimen/mtrl_progress_indicator_full_rounded_corner_radius"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/cant_find_peers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_fdroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swap_send_fdroid"
            app:icon="@drawable/ic_fdroid_grey"
            style="@style/Widget.App.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scan_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swap_scan_qr"
            app:icon="@drawable/ic_qr_code"
            style="@style/Widget.App.Button.TextButton"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:ellipsize="end"
            android:id="@+id/btn_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps"
            app:icon="@drawable/ic_apps"
            style="@style/Widget.App.Button.TextButton"/>
    </LinearLayout>
    <TextView
        android:textColor="@color/swap_light_text"
        android:id="@+id/header_cant_find_peers"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swap_cant_find_peers"
        android:layout_above="@+id/cant_find_peers"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
    <ListView
        android:id="@+id/list_people_nearby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/header_cant_find_peers"
        android:layout_below="@+id/feedback_searching"/>
</org.fdroid.fdroid.nearby.StartSwapView>
