<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/app_list_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginHorizontal="16dp">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/back"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back"
                        app:srcCompat="@drawable/abc_ic_ab_back_material"/>
                    <EditText
                        android:textSize="18sp"
                        android:id="@+id/search"
                        android:background="@android:color/transparent"
                        android:padding="12dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_hint"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"/>
                    <ImageView
                        android:id="@+id/clear"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/clear_search"
                        app:srcCompat="@drawable/ic_clear"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <ImageView
                android:id="@+id/sort"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sort_search"
                app:tint="?attr/colorControlNormal"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/hiddenAppNotice"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_list_results_hidden_antifeature_settings"
        android:drawablePadding="16dp"
        app:drawableStartCompat="@drawable/ic_error"/>
    <TextView
        android:id="@+id/empty_state"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_search_available_app_list"
        style="@style/AppListEmptyText"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/app_list"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"/>
</LinearLayout>
