<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight">
    <ImageView
        android:id="@android:id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:gravity="end"
        android:orientation="vertical"
        android:id="@+id/button_or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:layout_alignParentEnd="true">
        <Button
            android:textColor="@android:color/white"
            android:ellipsize="end"
            android:id="@+id/btn_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_install"
            android:maxEms="10"
            android:singleLine="true"
            android:backgroundTint="@color/swap_light_blue"/>
        <TextView
            android:textStyle="italic"
            android:id="@+id/status_installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_installed"/>
        <TextView
            android:textStyle="italic"
            android:textColor="@color/swap_incompatible"
            android:id="@+id/status_incompatible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_incompatible"/>
    </LinearLayout>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_toLeftOf="@+id/button_or_text"
        android:layout_toRightOf="@android:id/icon"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_toStartOf="@+id/button_or_text"
        android:layout_toEndOf="@android:id/icon"/>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_toLeftOf="@+id/button_or_text"
        android:layout_toRightOf="@android:id/icon"
        android:layout_below="@+id/name"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_toStartOf="@+id/button_or_text"
        android:layout_toEndOf="@android:id/icon"
        app:hideAnimationBehavior="outward"
        app:showAnimationBehavior="inward"
        app:trackCornerRadius="@dimen/mtrl_progress_indicator_full_rounded_corner_radius"/>
</RelativeLayout>
